# disk_detection_plugin

./: .gitignore  README.md  pyproject.toml
src/interactive_disk_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/py4d_browser_plugin/: __init__.py  interactive_disk_detect.py
src/py4d_browser_plugin/disk_detect/: __init__.py
src/py4d_browser_plugin/disk_detection/: __init__.py  bragg_disk_tab.py  disk_detection.py  probe_kernel_tab.py
